@@ -18,10 +18,9 @@ package org.graylog2.rest.resources.streams;
 
 import com.codahale.metrics.annotation.Timed;
 import com.google.common.base.Strings;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
+import com.google.common.collect.Sets;
 import com.google.common.util.concurrent.ThreadFactoryBuilder;
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
@@ -31,54 +30,58 @@ import io.swagger.annotations.ApiResponses;
 import org.apache.shiro.authz.annotation.RequiresAuthentication;
 import org.apache.shiro.authz.annotation.RequiresPermissions;
 import org.bson.types.ObjectId;
+import org.graylog.grn.GRNTypes;
+import org.graylog.plugins.views.startpage.recentActivities.RecentActivityService;
 import org.graylog.security.UserContext;
-import org.graylog2.alarmcallbacks.AlarmCallbackConfiguration;
-import org.graylog2.alarmcallbacks.AlarmCallbackConfigurationService;
-import org.graylog2.alerts.AlertService;
+import org.graylog2.audit.AuditEventSender;
 import org.graylog2.audit.AuditEventTypes;
 import org.graylog2.audit.jersey.AuditEvent;
+import org.graylog2.audit.jersey.DefaultFailureContextCreator;
 import org.graylog2.audit.jersey.NoAuditEvent;
+import org.graylog2.audit.jersey.SuccessContextCreator;
 import org.graylog2.database.NotFoundException;
 import org.graylog2.database.PaginatedList;
+import org.graylog2.database.filtering.DbQueryCreator;
 import org.graylog2.indexer.IndexSet;
 import org.graylog2.indexer.IndexSetRegistry;
+import org.graylog2.indexer.indexset.MongoIndexSetService;
 import org.graylog2.plugin.Message;
 import org.graylog2.plugin.Tools;
-import org.graylog2.plugin.alarms.AlertCondition;
-import org.graylog2.plugin.configuration.ConfigurationException;
+import org.graylog2.plugin.database.Persisted;
 import org.graylog2.plugin.database.ValidationException;
 import org.graylog2.plugin.streams.Output;
 import org.graylog2.plugin.streams.Stream;
 import org.graylog2.plugin.streams.StreamRule;
-import org.graylog2.rest.models.alarmcallbacks.requests.AlertReceivers;
-import org.graylog2.rest.models.alarmcallbacks.requests.CreateAlarmCallbackRequest;
-import org.graylog2.rest.models.streams.alerts.AlertConditionSummary;
-import org.graylog2.rest.models.streams.alerts.requests.CreateConditionRequest;
+import org.graylog2.rest.bulk.AuditParams;
+import org.graylog2.rest.bulk.BulkExecutor;
+import org.graylog2.rest.bulk.SequentialBulkExecutor;
+import org.graylog2.rest.bulk.model.BulkOperationRequest;
+import org.graylog2.rest.bulk.model.BulkOperationResponse;
 import org.graylog2.rest.models.streams.requests.UpdateStreamRequest;
 import org.graylog2.rest.models.system.outputs.responses.OutputSummary;
+import org.graylog2.rest.models.tools.responses.PageListResponse;
+import org.graylog2.rest.resources.entities.EntityAttribute;
+import org.graylog2.rest.resources.entities.EntityDefaults;
+import org.graylog2.rest.resources.entities.FilterOption;
+import org.graylog2.rest.resources.entities.Sorting;
 import org.graylog2.rest.resources.streams.requests.CloneStreamRequest;
 import org.graylog2.rest.resources.streams.requests.CreateStreamRequest;
+import org.graylog2.rest.resources.streams.responses.StreamCreatedResponse;
 import org.graylog2.rest.resources.streams.responses.StreamListResponse;
-import org.graylog2.rest.resources.streams.responses.StreamPageListResponse;
 import org.graylog2.rest.resources.streams.responses.StreamResponse;
 import org.graylog2.rest.resources.streams.responses.TestMatchResponse;
-import org.graylog2.search.SearchQuery;
 import org.graylog2.search.SearchQueryField;
-import org.graylog2.search.SearchQueryParser;
 import org.graylog2.shared.rest.resources.RestResource;
 import org.graylog2.shared.security.RestPermissions;
 import org.graylog2.streams.PaginatedStreamService;
 import org.graylog2.streams.StreamDTO;
 import org.graylog2.streams.StreamImpl;
 import org.graylog2.streams.StreamRouterEngine;
-import org.graylog2.streams.StreamRuleImpl;
 import org.graylog2.streams.StreamRuleService;
 import org.graylog2.streams.StreamService;
 import org.joda.time.DateTime;
 import org.joda.time.DateTimeZone;
 import org.joda.time.format.ISODateTimeFormat;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import javax.inject.Inject;
 import javax.validation.Valid;
@@ -99,14 +102,14 @@ import javax.ws.rs.core.Context;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
 import java.net.URI;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
-import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -114,27 +117,43 @@ import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 import static com.google.common.base.MoreObjects.firstNonNull;
+import static org.graylog2.shared.rest.documentation.generator.Generator.CLOUD_VISIBLE;
 
 @RequiresAuthentication
-@Api(value = "Streams", description = "Manage streams")
+@Api(value = "Streams", description = "Manage streams", tags = {CLOUD_VISIBLE})
 @Path("/streams")
 public class StreamResource extends RestResource {
-    private static final Logger LOG = LoggerFactory.getLogger(StreamResource.class);
-
-    protected static final ImmutableMap<String, SearchQueryField> SEARCH_FIELD_MAPPING = ImmutableMap.<String, SearchQueryField>builder()
-            .put("id", SearchQueryField.create(StreamDTO.FIELD_ID, SearchQueryField.Type.OBJECT_ID))
-            .put(StreamDTO.FIELD_TITLE, SearchQueryField.create(StreamDTO.FIELD_TITLE))
-            .put(StreamDTO.FIELD_DESCRIPTION, SearchQueryField.create(StreamDTO.FIELD_DESCRIPTION))
+    private static final String DEFAULT_SORT_FIELD = StreamDTO.FIELD_TITLE;
+    private static final String DEFAULT_SORT_DIRECTION = "asc";
+    private static final List<EntityAttribute> attributes = List.of(
+            EntityAttribute.builder().id(StreamDTO.FIELD_ID).title("id").type(SearchQueryField.Type.OBJECT_ID).hidden(true).searchable(true).build(),
+            EntityAttribute.builder().id(StreamDTO.FIELD_TITLE).title("Title").searchable(true).build(),
+            EntityAttribute.builder().id(StreamDTO.FIELD_DESCRIPTION).title("Description").searchable(true).build(),
+            EntityAttribute.builder().id(StreamDTO.FIELD_CREATED_AT).title("Created").type(SearchQueryField.Type.DATE).filterable(true).build(),
+            EntityAttribute.builder().id(StreamDTO.FIELD_INDEX_SET_ID).title("Index set")
+                    .relatedCollection(MongoIndexSetService.COLLECTION_NAME)
+                    .hidden(true)
+                    .filterable(true)
+                    .build(),
+            EntityAttribute.builder().id("disabled").title("Status").type(SearchQueryField.Type.BOOLEAN).filterable(true).filterOptions(Set.of(
+                    FilterOption.create("true", "Paused"),
+                    FilterOption.create("false", "Running")
+            )).build()
+    );
+    private static final EntityDefaults settings = EntityDefaults.builder()
+            .sort(Sorting.create(DEFAULT_SORT_FIELD, Sorting.Direction.valueOf(DEFAULT_SORT_DIRECTION.toUpperCase(Locale.ROOT))))
             .build();
-
     private final PaginatedStreamService paginatedStreamService;
     private final StreamService streamService;
     private final StreamRuleService streamRuleService;
     private final StreamRouterEngine.Factory streamRouterEngineFactory;
     private final IndexSetRegistry indexSetRegistry;
-    private final AlarmCallbackConfigurationService alarmCallbackConfigurationService;
-    private final AlertService alertService;
-    private final SearchQueryParser searchQueryParser;
+    private final RecentActivityService recentActivityService;
+    private final BulkExecutor<Stream, UserContext> bulkStreamDeleteExecutor;
+    private final BulkExecutor<Stream, UserContext> bulkStreamStartExecutor;
+    private final BulkExecutor<Stream, UserContext> bulkStreamStopExecutor;
+
+    private final DbQueryCreator dbQueryCreator;
 
     @Inject
     public StreamResource(StreamService streamService,
@@ -142,21 +161,30 @@ public class StreamResource extends RestResource {
                           StreamRuleService streamRuleService,
                           StreamRouterEngine.Factory streamRouterEngineFactory,
                           IndexSetRegistry indexSetRegistry,
-                          AlarmCallbackConfigurationService alarmCallbackConfigurationService,
-                          AlertService alertService) {
+                          RecentActivityService recentActivityService,
+                          AuditEventSender auditEventSender) {
         this.streamService = streamService;
         this.streamRuleService = streamRuleService;
         this.streamRouterEngineFactory = streamRouterEngineFactory;
         this.indexSetRegistry = indexSetRegistry;
-        this.alarmCallbackConfigurationService = alarmCallbackConfigurationService;
-        this.alertService = alertService;
         this.paginatedStreamService = paginatedStreamService;
-        this.searchQueryParser = new SearchQueryParser(StreamImpl.FIELD_TITLE, SEARCH_FIELD_MAPPING);
+        this.dbQueryCreator = new DbQueryCreator(StreamImpl.FIELD_TITLE, attributes);
+        this.recentActivityService = recentActivityService;
+        final SuccessContextCreator<Stream> successAuditLogContextCreator = (entity, entityClass) ->
+                Map.of("response_entity",
+                        Map.of("stream_id", entity.getId(),
+                                "title", entity.getTitle()
+                        ));
+        final DefaultFailureContextCreator failureAuditLogContextCreator = new DefaultFailureContextCreator();
+        this.bulkStreamDeleteExecutor = new SequentialBulkExecutor<>(this::deleteInner, auditEventSender, successAuditLogContextCreator, failureAuditLogContextCreator);
+        this.bulkStreamStartExecutor = new SequentialBulkExecutor<>(this::resumeInner, auditEventSender, successAuditLogContextCreator, failureAuditLogContextCreator);
+        this.bulkStreamStopExecutor = new SequentialBulkExecutor<>(this::pauseInner, auditEventSender, successAuditLogContextCreator, failureAuditLogContextCreator);
+
     }
 
     @POST
     @Timed
-    @ApiOperation(value = "Create a stream")
+    @ApiOperation(value = "Create a stream", response = StreamCreatedResponse.class)
     @RequiresPermissions(RestPermissions.STREAMS_CREATE)
     @Consumes(MediaType.APPLICATION_JSON)
     @Produces(MediaType.APPLICATION_JSON)
@@ -168,22 +196,19 @@ public class StreamResource extends RestResource {
         stream.setDisabled(true);
 
         final IndexSet indexSet = stream.getIndexSet();
-        if (!indexSet.getConfig().isWritable()) {
-            throw new BadRequestException("Assigned index set must be writable!");
-        } else if (!indexSet.getConfig().isRegularIndex()) {
-            throw new BadRequestException("Assigned index set is not usable");
-        }
+        checkIndexSet(indexSet);
 
-    final Set<StreamRule> streamRules = cr.rules().stream()
+        final Set<StreamRule> streamRules = cr.rules().stream()
                 .map(streamRule -> streamRuleService.create(null, streamRule))
                 .collect(Collectors.toSet());
         final String id = streamService.saveWithRulesAndOwnership(stream, streamRules, userContext.getUser());
 
-        final Map<String, String> result = ImmutableMap.of("stream_id", id);
+        var result = new StreamCreatedResponse(id);
         final URI streamUri = getUriBuilderToSelf().path(StreamResource.class)
             .path("{streamId}")
             .build(id);
 
+        recentActivityService.create(id, GRNTypes.STREAM, userContext.getUser());
         return Response.created(streamUri).entity(result).build();
     }
 
@@ -192,36 +217,37 @@ public class StreamResource extends RestResource {
     @Path("/paginated")
     @ApiOperation(value = "Get a paginated list of streams")
     @Produces(MediaType.APPLICATION_JSON)
-    public StreamPageListResponse getPage(@ApiParam(name = "page") @QueryParam("page") @DefaultValue("1") int page,
-        @ApiParam(name = "per_page") @QueryParam("per_page") @DefaultValue("50") int perPage,
-        @ApiParam(name = "query") @QueryParam("query") @DefaultValue("") String query,
-        @ApiParam(name = "sort",
-                value = "The field to sort the result on",
-                required = true,
-                allowableValues = "title,description")
-        @DefaultValue(StreamImpl.FIELD_TITLE) @QueryParam("sort") String sort,
-        @ApiParam(name = "order", value = "The sort direction", allowableValues = "asc, desc")
-        @DefaultValue("asc") @QueryParam("order") String order) {
+    public PageListResponse<StreamDTO> getPage(@ApiParam(name = "page") @QueryParam("page") @DefaultValue("1") int page,
+                                               @ApiParam(name = "per_page") @QueryParam("per_page") @DefaultValue("50") int perPage,
+                                               @ApiParam(name = "query") @QueryParam("query") @DefaultValue("") String query,
+                                               @ApiParam(name = "filters") @QueryParam("filters") List<String> filters,
+                                               @ApiParam(name = "sort",
+                                                         value = "The field to sort the result on",
+                                                         required = true,
+                                                         allowableValues = "title,description,created_at,updated_at,status")
+                                                   @DefaultValue(DEFAULT_SORT_FIELD) @QueryParam("sort") String sort,
+                                               @ApiParam(name = "order", value = "The sort direction", allowableValues = "asc, desc")
+                                                   @DefaultValue(DEFAULT_SORT_DIRECTION) @QueryParam("order") String order) {
 
-        SearchQuery searchQuery;
-        try {
-            searchQuery = searchQueryParser.parse(query);
-        } catch (IllegalArgumentException e) {
-            throw new BadRequestException("Invalid argument in search query: " + e.getMessage());
-        }
         final Predicate<StreamDTO> permissionFilter = streamDTO -> isPermitted(RestPermissions.STREAMS_READ, streamDTO.id());
         final PaginatedList<StreamDTO> result = paginatedStreamService
-                .findPaginated(searchQuery, permissionFilter, page, perPage, sort, order);
-        final List<String> streamIds = result.stream().map(streamDTO -> streamDTO.id()).collect(Collectors.toList());
+                .findPaginated(dbQueryCreator.createDbQuery(filters, query), permissionFilter, page, perPage, sort, order);
+
+        final List<String> streamIds = result.stream().map(StreamDTO::id).toList();
         final Map<String, List<StreamRule>> streamRuleMap = streamRuleService.loadForStreamIds(streamIds);
-        final List<StreamDTO> streams = result.stream().map(streamDTO -> {
-            List<StreamRule> rules = streamRuleMap.getOrDefault(streamDTO.id(), Collections.emptyList());
-            return streamDTO.toBuilder().rules(rules).build();
-        }).collect(Collectors.toList());
+
+        final List<StreamDTO> streams = result
+                .stream()
+                .map(streamDTO -> {
+                    final List<StreamRule> rules = streamRuleMap.getOrDefault(streamDTO.id(), Collections.emptyList());
+                    return streamDTO.toBuilder().rules(rules).build();
+                })
+                .toList();
         final long total = paginatedStreamService.count();
-        final PaginatedList<StreamDTO> streamDTOS = new PaginatedList<>(streams,
-                result.pagination().total(), result.pagination().page(), result.pagination().perPage());
-        return StreamPageListResponse.create(query, streamDTOS.pagination(), total, sort, order, streams);
+        final PaginatedList<StreamDTO> streamDTOS = new PaginatedList<>(
+                streams, result.pagination().total(), result.pagination().page(), result.pagination().perPage()
+        );
+        return PageListResponse.create(query, streamDTOS.pagination(), total, sort, order, streams, attributes, settings);
     }
 
     @GET
@@ -230,13 +256,10 @@ public class StreamResource extends RestResource {
     @Deprecated
     @Produces(MediaType.APPLICATION_JSON)
     public StreamListResponse get() {
-        final List<Stream> allStreams = streamService.loadAll();
-        final List<Stream> streams = new ArrayList<>(allStreams.size());
-        for (Stream stream : allStreams) {
-            if (isPermitted(RestPermissions.STREAMS_READ, stream.getId())) {
-                streams.add(stream);
-            }
-        }
+        final List<Stream> streams = streamService.loadAll()
+                .stream()
+                .filter(stream -> isPermitted(RestPermissions.STREAMS_READ, stream.getId()))
+                .toList();
 
         return StreamListResponse.create(streams.size(), streams.stream().map(this::streamToResponse).collect(Collectors.toSet()));
     }
@@ -246,14 +269,11 @@ public class StreamResource extends RestResource {
     @Timed
     @ApiOperation(value = "Get a list of all enabled streams")
     @Produces(MediaType.APPLICATION_JSON)
-    public StreamListResponse getEnabled() throws NotFoundException {
-        final List<Stream> enabledStreams = streamService.loadAllEnabled();
-        final List<Stream> streams = new ArrayList<>(enabledStreams.size());
-        for (Stream stream : enabledStreams) {
-            if (isPermitted(RestPermissions.STREAMS_READ, stream.getId())) {
-                streams.add(stream);
-            }
-        }
+    public StreamListResponse getEnabled() {
+        final List<Stream> streams = streamService.loadAllEnabled()
+                .stream()
+                .filter(stream -> isPermitted(RestPermissions.STREAMS_READ, stream.getId()))
+                .toList();
 
         return StreamListResponse.create(streams.size(), streams.stream().map(this::streamToResponse).collect(Collectors.toSet()));
     }
@@ -288,14 +308,15 @@ public class StreamResource extends RestResource {
     public StreamResponse update(@ApiParam(name = "streamId", required = true)
                                  @PathParam("streamId") String streamId,
                                  @ApiParam(name = "JSON body", required = true)
-                                 @Valid @NotNull UpdateStreamRequest cr) throws NotFoundException, ValidationException {
+                                 @Valid @NotNull UpdateStreamRequest cr,
+                                 @Context UserContext userContext) throws NotFoundException, ValidationException {
         checkPermission(RestPermissions.STREAMS_EDIT, streamId);
         checkNotEditableStream(streamId, "The stream cannot be edited.");
 
         final Stream stream = streamService.load(streamId);
 
         if (!Strings.isNullOrEmpty(cr.title())) {
-            stream.setTitle(cr.title());
+            stream.setTitle(cr.title().strip());
         }
 
         if (!Strings.isNullOrEmpty(cr.description())) {
@@ -312,7 +333,7 @@ public class StreamResource extends RestResource {
         }
 
         final Boolean removeMatchesFromDefaultStream = cr.removeMatchesFromDefaultStream();
-        if(removeMatchesFromDefaultStream != null) {
+        if (removeMatchesFromDefaultStream != null) {
             stream.setRemoveMatchesFromDefaultStream(removeMatchesFromDefaultStream);
         }
 
@@ -322,18 +343,19 @@ public class StreamResource extends RestResource {
             stream.setIndexSetId(cr.indexSetId());
         }
 
-        final Optional<IndexSet> indexSet = indexSetRegistry.get(stream.getIndexSetId());
+        final IndexSet indexSet = indexSetRegistry.get(stream.getIndexSetId())
+                .orElseThrow(() -> new BadRequestException("Index set with ID <" + stream.getIndexSetId() + "> does not exist!"));
 
-        if (!indexSet.isPresent()) {
-            throw new BadRequestException("Index set with ID <" + stream.getIndexSetId() + "> does not exist!");
-        } else if (!indexSet.get().getConfig().isWritable()) {
+        if (!indexSet.getConfig().isWritable()) {
             throw new BadRequestException("Assigned index set must be writable!");
-        } else if (!indexSet.get().getConfig().isRegularIndex()) {
+        }
+        if (!indexSet.getConfig().isRegularIndex()) {
             throw new BadRequestException("Assigned index set is not usable");
         }
 
         streamService.save(stream);
 
+        recentActivityService.update(streamId, GRNTypes.STREAM, userContext.getUser());
         return streamToResponse(stream);
     }
 
@@ -342,16 +364,80 @@ public class StreamResource extends RestResource {
     @Timed
     @ApiOperation(value = "Delete a stream")
     @ApiResponses(value = {
-        @ApiResponse(code = 404, message = "Stream not found."),
-        @ApiResponse(code = 400, message = "Invalid ObjectId.")
+            @ApiResponse(code = 404, message = "Stream not found."),
+            @ApiResponse(code = 400, message = "Invalid ObjectId.")
     })
     @AuditEvent(type = AuditEventTypes.STREAM_DELETE)
-    public void delete(@ApiParam(name = "streamId", required = true) @PathParam("streamId") String streamId) throws NotFoundException {
+    public void delete(@ApiParam(name = "streamId", required = true) @PathParam("streamId") String streamId,
+                       @Context UserContext userContext) throws NotFoundException {
+        deleteInner(streamId, userContext);
+    }
+
+    private Stream deleteInner(String streamId, UserContext userContext) throws NotFoundException {
         checkPermission(RestPermissions.STREAMS_EDIT, streamId);
         checkNotEditableStream(streamId, "The stream cannot be deleted.");
 
         final Stream stream = streamService.load(streamId);
+        recentActivityService.delete(streamId, GRNTypes.STREAM, stream.getTitle(), userContext.getUser());
         streamService.destroy(stream);
+        return stream;
+    }
+
+    @POST
+    @Path("/bulk_delete")
+    @Consumes(MediaType.APPLICATION_JSON)
+    @Timed
+    @ApiOperation(value = "Delete a bulk of streams", response = BulkOperationResponse.class)
+    @NoAuditEvent("Audit events triggered manually")
+    public Response bulkDelete(@ApiParam(name = "Entities to remove", required = true) final BulkOperationRequest bulkOperationRequest,
+                               @Context final UserContext userContext) {
+
+        final BulkOperationResponse response = bulkStreamDeleteExecutor.executeBulkOperation(
+                bulkOperationRequest,
+                userContext,
+                new AuditParams(AuditEventTypes.STREAM_DELETE, "streamId", Stream.class));
+
+        return Response.status(Response.Status.OK)
+                .entity(response)
+                .build();
+    }
+
+    @POST
+    @Path("/bulk_pause")
+    @Consumes(MediaType.APPLICATION_JSON)
+    @Timed
+    @ApiOperation(value = "Pause a bulk of streams", response = BulkOperationResponse.class)
+    @NoAuditEvent("Audit events triggered manually")
+    public Response bulkPause(@ApiParam(name = "Streams to pause", required = true) final BulkOperationRequest bulkOperationRequest,
+                              @Context final UserContext userContext) {
+
+        final BulkOperationResponse response = bulkStreamStopExecutor.executeBulkOperation(
+                bulkOperationRequest,
+                userContext,
+                new AuditParams(AuditEventTypes.STREAM_STOP, "streamId", Stream.class));
+
+        return Response.status(Response.Status.OK)
+                .entity(response)
+                .build();
+    }
+
+    @POST
+    @Path("/bulk_resume")
+    @Consumes(MediaType.APPLICATION_JSON)
+    @Timed
+    @ApiOperation(value = "Resume a bulk of streams", response = BulkOperationResponse.class)
+    @NoAuditEvent("Audit events triggered manually")
+    public Response bulkResume(@ApiParam(name = "Streams to resume", required = true) final BulkOperationRequest bulkOperationRequest,
+                               @Context final UserContext userContext) {
+
+        final BulkOperationResponse response = bulkStreamStartExecutor.executeBulkOperation(
+                bulkOperationRequest,
+                userContext,
+                new AuditParams(AuditEventTypes.STREAM_START, "streamId", Stream.class));
+
+        return Response.status(Response.Status.OK)
+                .entity(response)
+                .build();
     }
 
     @POST
@@ -359,17 +445,22 @@ public class StreamResource extends RestResource {
     @Timed
     @ApiOperation(value = "Pause a stream")
     @ApiResponses(value = {
-        @ApiResponse(code = 404, message = "Stream not found."),
-        @ApiResponse(code = 400, message = "Invalid or missing Stream id.")
+            @ApiResponse(code = 404, message = "Stream not found."),
+            @ApiResponse(code = 400, message = "Invalid or missing Stream id.")
     })
     @AuditEvent(type = AuditEventTypes.STREAM_STOP)
     public void pause(@ApiParam(name = "streamId", required = true)
                       @PathParam("streamId") @NotEmpty String streamId) throws NotFoundException, ValidationException {
+        pauseInner(streamId, null);
+    }
+
+    private Stream pauseInner(String streamId, UserContext userContext) throws NotFoundException, ValidationException {
         checkAnyPermission(new String[]{RestPermissions.STREAMS_CHANGESTATE, RestPermissions.STREAMS_EDIT}, streamId);
         checkNotEditableStream(streamId, "The stream cannot be paused.");
 
         final Stream stream = streamService.load(streamId);
         streamService.pause(stream);
+        return stream;
     }
 
     @POST
@@ -377,17 +468,23 @@ public class StreamResource extends RestResource {
     @Timed
     @ApiOperation(value = "Resume a stream")
     @ApiResponses(value = {
-        @ApiResponse(code = 404, message = "Stream not found."),
-        @ApiResponse(code = 400, message = "Invalid or missing Stream id.")
+            @ApiResponse(code = 404, message = "Stream not found."),
+            @ApiResponse(code = 400, message = "Invalid or missing Stream id.")
     })
     @AuditEvent(type = AuditEventTypes.STREAM_START)
     public void resume(@ApiParam(name = "streamId", required = true)
-                       @PathParam("streamId") @NotEmpty String streamId) throws NotFoundException, ValidationException {
+                       @PathParam("streamId") @NotEmpty String streamId,
+                       @Context UserContext userContext) throws NotFoundException, ValidationException {
+        resumeInner(streamId, null);
+    }
+
+    private Stream resumeInner(String streamId, UserContext userContext) throws NotFoundException, ValidationException {
         checkAnyPermission(new String[]{RestPermissions.STREAMS_CHANGESTATE, RestPermissions.STREAMS_EDIT}, streamId);
         checkNotEditableStream(streamId, "The stream cannot be resumed.");
 
         final Stream stream = streamService.load(streamId);
         streamService.resume(stream);
+        return stream;
     }
 
     @POST
@@ -395,8 +492,8 @@ public class StreamResource extends RestResource {
     @Timed
     @ApiOperation(value = "Test matching of a stream against a supplied message")
     @ApiResponses(value = {
-        @ApiResponse(code = 404, message = "Stream not found."),
-        @ApiResponse(code = 400, message = "Invalid or missing Stream id.")
+            @ApiResponse(code = 404, message = "Stream not found."),
+            @ApiResponse(code = 400, message = "Invalid or missing Stream id.")
     })
     @NoAuditEvent("only used for testing stream matches")
     public TestMatchResponse testMatch(@ApiParam(name = "streamId", required = true)
@@ -434,7 +531,7 @@ public class StreamResource extends RestResource {
     @POST
     @Path("/{streamId}/clone")
     @Timed
-    @ApiOperation(value = "Clone a stream")
+    @ApiOperation(value = "Clone a stream", response = StreamCreatedResponse.class)
     @ApiResponses(value = {
         @ApiResponse(code = 404, message = "Stream not found."),
         @ApiResponse(code = 400, message = "Invalid or missing Stream id.")
@@ -453,52 +550,25 @@ public class StreamResource extends RestResource {
         final String creatorUser = getCurrentUser().getName();
 
         final List<StreamRule> sourceStreamRules = streamRuleService.loadForStream(sourceStream);
-        final ImmutableSet.Builder<StreamRule> newStreamRules = ImmutableSet.builderWithExpectedSize(sourceStreamRules.size());
-        for (StreamRule streamRule : sourceStreamRules) {
-            final Map<String, Object> streamRuleData = Maps.newHashMapWithExpectedSize(6);
+        final Set<StreamRule> newStreamRules = sourceStreamRules
+                .stream()
+                .map(streamRule -> streamRuleService.copy(null, streamRule))
+                .collect(Collectors.toSet());
 
-            streamRuleData.put(StreamRuleImpl.FIELD_TYPE, streamRule.getType().toInteger());
-            streamRuleData.put(StreamRuleImpl.FIELD_FIELD, streamRule.getField());
-            streamRuleData.put(StreamRuleImpl.FIELD_VALUE, streamRule.getValue());
-            streamRuleData.put(StreamRuleImpl.FIELD_INVERTED, streamRule.getInverted());
-            streamRuleData.put(StreamRuleImpl.FIELD_DESCRIPTION, streamRule.getDescription());
-
-            final StreamRule newStreamRule = streamRuleService.create(streamRuleData);
-            newStreamRules.add(newStreamRule);
-        }
-
-        final Map<String, Object> streamData = Maps.newHashMap();
-        streamData.put(StreamImpl.FIELD_TITLE, cr.title());
-        streamData.put(StreamImpl.FIELD_DESCRIPTION, cr.description());
-        streamData.put(StreamImpl.FIELD_CREATOR_USER_ID, creatorUser);
-        streamData.put(StreamImpl.FIELD_CREATED_AT, Tools.nowUTC());
-        streamData.put(StreamImpl.FIELD_MATCHING_TYPE, sourceStream.getMatchingType().toString());
-        streamData.put(StreamImpl.FIELD_REMOVE_MATCHES_FROM_DEFAULT_STREAM, cr.removeMatchesFromDefaultStream());
-        streamData.put(StreamImpl.FIELD_DISABLED, true);
-        streamData.put(StreamImpl.FIELD_INDEX_SET_ID, cr.indexSetId());
+        final Map<String, Object> streamData = Map.of(
+                StreamImpl.FIELD_TITLE, cr.title().strip(),
+                StreamImpl.FIELD_DESCRIPTION, cr.description(),
+                StreamImpl.FIELD_CREATOR_USER_ID, creatorUser,
+                StreamImpl.FIELD_CREATED_AT, Tools.nowUTC(),
+                StreamImpl.FIELD_MATCHING_TYPE, sourceStream.getMatchingType().toString(),
+                StreamImpl.FIELD_REMOVE_MATCHES_FROM_DEFAULT_STREAM, cr.removeMatchesFromDefaultStream(),
+                StreamImpl.FIELD_DISABLED, true,
+                StreamImpl.FIELD_INDEX_SET_ID, cr.indexSetId()
+        );
 
         final Stream stream = streamService.create(streamData);
-        final String savedStreamId = streamService.saveWithRulesAndOwnership(stream, newStreamRules.build(), userContext.getUser());
+        final String savedStreamId = streamService.saveWithRulesAndOwnership(stream, newStreamRules, userContext.getUser());
         final ObjectId savedStreamObjectId = new ObjectId(savedStreamId);
-
-        for (AlertCondition alertCondition : streamService.getAlertConditions(sourceStream)) {
-            try {
-                final AlertCondition clonedAlertCondition = alertService.fromRequest(
-                    CreateConditionRequest.create(alertCondition.getType(), alertCondition.getTitle(), alertCondition.getParameters()),
-                    stream,
-                    creatorUser
-                );
-                streamService.addAlertCondition(stream, clonedAlertCondition);
-            } catch (ConfigurationException e) {
-                LOG.warn("Unable to clone alert condition <" + alertCondition + "> - skipping: ", e);
-            }
-        }
-
-        for (AlarmCallbackConfiguration alarmCallbackConfiguration : alarmCallbackConfigurationService.getForStream(sourceStream)) {
-            final CreateAlarmCallbackRequest request = CreateAlarmCallbackRequest.create(alarmCallbackConfiguration);
-            final AlarmCallbackConfiguration alarmCallback = alarmCallbackConfigurationService.create(stream.getId(), request, getCurrentUser().getName());
-            alarmCallbackConfigurationService.save(alarmCallback);
-        }
 
         final Set<ObjectId> outputIds = sourceStream.getOutputs().stream()
                 .map(Output::getId)
@@ -506,7 +576,7 @@ public class StreamResource extends RestResource {
                 .collect(Collectors.toSet());
         streamService.addOutputs(savedStreamObjectId, outputIds);
 
-        final Map<String, String> result = ImmutableMap.of("stream_id", savedStreamId);
+        var result = new StreamCreatedResponse(savedStreamId);
         final URI streamUri = getUriBuilderToSelf().path(StreamResource.class)
             .path("{streamId}")
             .build(savedStreamId);
@@ -514,19 +584,54 @@ public class StreamResource extends RestResource {
         return Response.created(streamUri).entity(result).build();
     }
 
+    @PUT
+    @Path("/indexSet/{indexSetId}")
+    @Timed
+    @ApiOperation(value = "Assign multiple streams to index set")
+    @ApiResponses(value = {
+            @ApiResponse(code = 404, message = "Index set not found.")
+    })
+    @Consumes(MediaType.APPLICATION_JSON)
+    @Produces(MediaType.APPLICATION_JSON)
+    @AuditEvent(type = AuditEventTypes.STREAM_UPDATE)
+    public Response assignToIndexSet(@ApiParam(name = "indexSetId", required = true) @PathParam("indexSetId") String indexSetId,
+                                    @ApiParam(name = "JSON body", required = true) @Valid @NotNull List<String> streamIds) {
+        checkPermission(RestPermissions.INDEXSETS_READ, indexSetId);
+        streamIds.forEach(streamId -> {
+            checkPermission(RestPermissions.STREAMS_EDIT, streamId);
+            checkNotEditableStream(streamId, "The stream with id <" + streamId + "> cannot be edited.");
+        });
+
+        final Set<String> existingStreams = streamService.loadByIds(streamIds)
+                .stream()
+                .map(Persisted::getId)
+                .collect(Collectors.toSet());
+
+        final Set<String> missingStreams = Sets.difference(new HashSet<>(streamIds), existingStreams);
+
+        if (!missingStreams.isEmpty()) {
+            return Response.status(Response.Status.NOT_FOUND).entity("Missing streams: " + missingStreams).build();
+        }
+
+        return indexSetRegistry.get(indexSetId)
+                .map(indexSet -> {
+                    checkIndexSet(indexSet);
+
+                    streamService.addToIndexSet(indexSetId, streamIds);
+                    return Response.ok().build();
+                })
+                .orElse(Response.status(Response.Status.NOT_FOUND).build());
+    }
+
+    private void checkIndexSet(IndexSet indexSet) {
+        if (!indexSet.getConfig().isWritable()) {
+            throw new BadRequestException("Assigned index set must be writable!");
+        } else if (!indexSet.getConfig().isRegularIndex()) {
+            throw new BadRequestException("Assigned index set is not usable");
+        }
+    }
+
     private StreamResponse streamToResponse(Stream stream) {
-        final List<String> emailAlertReceivers = stream.getAlertReceivers().get("emails");
-        final List<String> usersAlertReceivers = stream.getAlertReceivers().get("users");
-        final Collection<AlertConditionSummary> alertConditions = streamService.getAlertConditions(stream)
-            .stream()
-            .map((alertCondition) -> AlertConditionSummary.createWithoutGrace(
-                alertCondition.getId(),
-                alertCondition.getType(),
-                alertCondition.getCreatorUserId(),
-                alertCondition.getCreatedAt().toDate(),
-                alertCondition.getParameters(),
-                alertCondition.getTitle()))
-            .collect(Collectors.toList());
         return StreamResponse.create(
             stream.getId(),
             (String) stream.getFields().get(StreamImpl.FIELD_CREATOR_USER_ID),
@@ -536,8 +641,6 @@ public class StreamResource extends RestResource {
             stream.getFields().get(StreamImpl.FIELD_CREATED_AT).toString(),
             stream.getDisabled(),
             stream.getStreamRules(),
-            alertConditions,
-            AlertReceivers.create(emailAlertReceivers, usersAlertReceivers),
             stream.getTitle(),
             stream.getContentPack(),
             stream.isDefaultStream(),
