@@ -17,6 +17,9 @@
 package org.graylog.testing.containermatrix;
 
 import com.google.common.io.Resources;
+import io.github.classgraph.ClassGraph;
+import io.github.classgraph.ClassInfo;
+import io.github.classgraph.ScanResult;
 import org.graylog.testing.completebackend.Lifecycle;
 import org.graylog.testing.completebackend.MavenProjectDirProvider;
 import org.graylog.testing.completebackend.PluginJarsProvider;
@@ -38,8 +41,8 @@ import org.junit.platform.engine.UniqueId;
 import org.junit.platform.engine.support.hierarchical.ContainerMatrixHierarchicalTestEngine;
 import org.junit.platform.engine.support.hierarchical.HierarchicalTestExecutorService;
 import org.junit.platform.engine.support.hierarchical.ThrowableCollector;
-import org.reflections.Reflections;
 
+import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
 import java.nio.file.Paths;
 import java.util.ArrayList;
@@ -56,6 +59,21 @@ import static org.apache.commons.lang3.StringUtils.isBlank;
 
 public class ContainerMatrixTestEngine extends ContainerMatrixHierarchicalTestEngine<JupiterEngineExecutionContext> {
     private static final String ENGINE_ID = "graylog-container-matrix-tests";
+
+    private static final Set<Class<?>> annotatedClasses;
+
+    static {
+        // Collect all annotated classes once to avoid the class scanning overhead on each #discover() call
+        final ClassGraph classGraph = new ClassGraph()
+                .ignoreClassVisibility() // JUnit5 test classes might be package-private
+                .enableAnnotationInfo()
+                .acceptPackages("org.graylog", "org.graylog2");
+        try (final ScanResult scanResult = classGraph.scan()) {
+            annotatedClasses = scanResult.getClassesWithAnnotation(ContainerMatrixTestsConfiguration.class.getCanonicalName()).stream()
+                    .map(ClassInfo::loadClass)
+                    .collect(Collectors.toSet());
+        }
+    }
 
     @Override
     public String getId() {
@@ -148,8 +166,9 @@ public class ContainerMatrixTestEngine extends ContainerMatrixHierarchicalTestEn
 
     private <T> T instantiateFactory(Class<? extends T> providerClass) {
         try {
-            return providerClass.newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
+            return providerClass.getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException |
+                 InvocationTargetException e) {
             throw new RuntimeException("Unable to construct instance of " + providerClass.getSimpleName() + ": ", e);
         }
     }
@@ -165,10 +184,9 @@ public class ContainerMatrixTestEngine extends ContainerMatrixHierarchicalTestEn
                 new DefaultJupiterConfiguration(discoveryRequest.getConfigurationParameters()));
         final ContainerMatrixEngineDescriptor engineDescriptor = new ContainerMatrixEngineDescriptor(uniqueId, "Graylog Container Matrix Tests", configuration);
 
-        Reflections reflections = new Reflections("org.graylog", "org.graylog2");
-        final Set<Class<?>> annotated = reflections.getTypesAnnotatedWith(ContainerMatrixTestsConfiguration.class);
-        final Set<Integer> extraPorts = getExtraPorts(annotated);
-        final List<URL> mongoDBFixtures = getMongoDBFixtures(annotated);
+        final Set<Integer> extraPorts = getExtraPorts(annotatedClasses);
+        final List<URL> mongoDBFixtures = getMongoDBFixtures(annotatedClasses);
+        final boolean withMailServerEnabled = isMailServerRequired(annotatedClasses);
 
         if (testAgainstRunningESMongoDB()) {
             // if you test from inside an IDE against running containers
@@ -180,35 +198,36 @@ public class ContainerMatrixTestEngine extends ContainerMatrixHierarchicalTestEn
             engineDescriptor.addChild(testsDescriptor);
         } else {
             // for full tests, create all combinations of tests. First differentiate for maven builds.
-            getMavenProjectDirProvider(annotated)
-                    .forEach(mavenProjectDirProvider -> getPluginJarsProvider(annotated)
+            getMavenProjectDirProvider(annotatedClasses)
+                    .forEach(mavenProjectDirProvider -> getPluginJarsProvider(annotatedClasses)
                             .forEach(pluginJarsProvider -> {
-                                        MavenProjectDirProvider mpdp = instantiateFactory(mavenProjectDirProvider);
-                                        PluginJarsProvider pjp = instantiateFactory(pluginJarsProvider);
-                                        // now add all grouped tests for Lifecycle.VM
-                                        getSearchServerVersions(annotated)
-                                                .stream().map(SearchServer::getSearchVersion)
-                                                .forEach(searchVersion -> getMongoVersions(annotated)
-                                                        .forEach(mongoVersion -> {
-                                                            ContainerMatrixTestsDescriptor testsDescriptor = new ContainerMatrixTestsDescriptor(engineDescriptor,
-                                                                    Lifecycle.VM,
-                                                                    mavenProjectDirProvider,
-                                                                    mpdp.getUniqueId(),
-                                                                    pluginJarsProvider,
-                                                                    pjp.getUniqueId(),
-                                                                    searchVersion,
-                                                                    mongoVersion,
-                                                                    extraPorts,
-                                                                    mongoDBFixtures,
-                                                                    getEnabledFeatureFlags(Lifecycle.VM, annotated));
-                                                            new ContainerMatrixTestsDiscoverySelectorResolver(engineDescriptor).resolveSelectors(discoveryRequest, testsDescriptor);
-                                                            engineDescriptor.addChild(testsDescriptor);
-                                                        })
-                                                );
-                                        // add separate test classes (Lifecycle.CLASS)
-                                        getSearchServerVersions(annotated)
-                                                .stream().map(SearchServer::getSearchVersion)
-                                                .forEach(esVersion -> getMongoVersions(annotated)
+                                MavenProjectDirProvider mpdp = instantiateFactory(mavenProjectDirProvider);
+                                PluginJarsProvider pjp = instantiateFactory(pluginJarsProvider);
+                                // now add all grouped tests for Lifecycle.VM
+                                getSearchServerVersions(annotatedClasses)
+                                        .stream().map(SearchServer::getSearchVersion)
+                                        .forEach(searchVersion -> getMongoVersions(annotatedClasses)
+                                                .forEach(mongoVersion -> {
+                                                    ContainerMatrixTestsDescriptor testsDescriptor = new ContainerMatrixTestsDescriptor(engineDescriptor,
+                                                            Lifecycle.VM,
+                                                            mavenProjectDirProvider,
+                                                            mpdp.getUniqueId(),
+                                                            pluginJarsProvider,
+                                                            pjp.getUniqueId(),
+                                                            searchVersion,
+                                                            mongoVersion,
+                                                            extraPorts,
+                                                            mongoDBFixtures,
+                                                            getEnabledFeatureFlags(Lifecycle.VM, annotatedClasses),
+                                                            withMailServerEnabled);
+                                                    new ContainerMatrixTestsDiscoverySelectorResolver(engineDescriptor).resolveSelectors(discoveryRequest, testsDescriptor);
+                                                    engineDescriptor.addChild(testsDescriptor);
+                                                })
+                                        );
+                                // add separate test classes (Lifecycle.CLASS)
+                                getSearchServerVersions(annotatedClasses)
+                                        .stream().map(SearchServer::getSearchVersion)
+                                        .forEach(esVersion -> getMongoVersions(annotatedClasses)
                                                         .forEach(mongoVersion -> {
                                                             ContainerMatrixTestsDescriptor testsDescriptor = new ContainerMatrixTestsDescriptor(engineDescriptor,
                                                                     Lifecycle.CLASS,
@@ -220,7 +239,7 @@ public class ContainerMatrixTestEngine extends ContainerMatrixHierarchicalTestEn
                                                                     mongoVersion,
                                                                     extraPorts,
                                                                     new ArrayList<>(),
-                                                                    getEnabledFeatureFlags(Lifecycle.CLASS, annotated));
+                                                                    getEnabledFeatureFlags(Lifecycle.CLASS, annotatedClasses), withMailServerEnabled);
                                                             new ContainerMatrixTestsDiscoverySelectorResolver(engineDescriptor).resolveSelectors(discoveryRequest, testsDescriptor);
                                                             engineDescriptor.addChild(testsDescriptor);
                                                         })
@@ -231,6 +250,15 @@ public class ContainerMatrixTestEngine extends ContainerMatrixHierarchicalTestEn
         }
 
         return engineDescriptor;
+    }
+
+    private boolean isMailServerRequired(Set<Class<?>> annotatedClasses) {
+         return annotatedClasses
+                .stream()
+                .map(aClass -> AnnotationSupport.findAnnotation(aClass, ContainerMatrixTestsConfiguration.class))
+                .filter(Optional::isPresent)
+                .map(Optional::get)
+                .anyMatch(ContainerMatrixTestsConfiguration::withMailServerEnabled);
     }
 
     @Override
